lore-store/src/snapshots/lore_store__store__tests__parse_kind_with_uri_name.snap
---
source: lore-store/src/store.rs
expression: snapshot

---

input:
    kind spotify:kind:artist

output:

Ok(
    Store {
        aliases: [],
        attributes: [],
        directives: [],
        kinds: [
            Kind {
                name: Name {
                    alias: None,
                    uri: URI(
                        "spotify:kind:artist",
                    ),
                },
            },
        ],
    },
)

