lore-store/src/snapshots/lore_store__store__tests__store_alias.snap
---
source: lore-store/src/store.rs
expression: snapshot

---

input:
     use spotify:artist:2Hkut4rAAyrQxRdof7FVJq as Rush 

output:

Ok(
    Store {
        attributes: [],
        kinds: [],
    },
)

