lore-store/src/snapshots/lore_store__store__tests__store_attr_with_uri_name.snap
---
source: lore-store/src/store.rs
expression: snapshot

---

input:
    attr spotify:field:Name

output:

Store {
  kinds: {
  }
  attributes: {
    Attribute {
    name: Name {
        alias: None,
        uri: URI(
            "spotify:field:Name",
        ),
    },
    fields: [],
}
  }
  relations: {
  }
}

