lore-store/src/snapshots/lore_store__store__tests__store_kind_with_aliased_name.snap
---
source: lore-store/src/store.rs
expression: snapshot

---

input:
    
        use spotify:kind:artist as Artist
        kind Artist
        

output:

Ok(
    Store {
        relations: [],
        attributes: [],
        kinds: [
            Kind {
                name: Name {
                    alias: Some(
                        "Artist",
                    ),
                    uri: URI(
                        "spotify:kind:artist",
                    ),
                },
            },
        ],
    },
)

