lore-store/src/snapshots/lore_store__store__tests__store_kind_with_uri_name.snap
---
source: lore-store/src/store.rs
expression: snapshot

---

input:
    kind spotify:kind:artist

output:

Store {
  kinds: {
  Kind {
    name: Name {
        alias: None,
        uri: URI(
            "spotify:kind:artist",
        ),
    },
    fields: [],
}
  }
  attributes: {
  }
  relations: {
  }
}

